# tikz-presentations

./: .gitignore  Makefile  README.md  famt25.py  main.py  mcf_bordeaux.py  mfcs_2025_lcwqo.py  papers.bib  polyczek.py  pyproject.toml
.github/workflows/: ci.yml
data/: aliaume-cv.yaml  inp-bordeaux-syllabus.yaml
tikz_presentations_aliaume/components/: graphs.py  typography.py  utils.py  wqos.py
